# DroneBridge-ESP32

./: partitions.csv
frontend/: dronebridge.js  index.html
main/: CMakeLists.txt  Kconfig.projbuild  camera.c  camera.h  globals.h  http_server.c  idf_component.yml  main.c  main.h
